--- a/scripts/roles/global_ca/templates/secret.yaml.j2
+++ b/scripts/roles/global_ca/templates/secret.yaml.j2
@@ -1,7 +1,7 @@
 kind: Secret
 apiVersion: v1
 metadata:
-  name: apollo-one-shot
+  name: nt-cp4ba-demo
   namespace: "{{ global_ca_output_namespace }}"
 type: Opaque
 data:
