--- a/scripts/roles/usage/templates/usage-configmap.yaml.j2
+++ b/scripts/roles/usage/templates/usage-configmap.yaml.j2
@@ -10,9 +10,9 @@ data:
   z-git-commit: |
     ## Version
 
-    For the reference and to know which version of the Apollo one-shot deployment was used, bellow you can find the sha hash of the used commit.
+    For the reference and to know which version of the cp4ba demo deployment was used, bellow you can find the sha hash of the used commit.
 
-    - Apollo one-shot used commit sha hash: {{ git_commit_id }}
+    - cp4ba demo used commit sha hash: {{ git_commit_id }}
 {% endif %}
 {% if zen_api_key_new is defined %}
   zen-api-key: {{ zen_api_key_new }}
